[package]
name = "vigilant-succotash"
version = "0.1.0"
authors = ["Simon Martin <smartin@scottlogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"                # higher level HTTP client library
futures = "0.3.4"                 # An implementation of futures and streams featuring zero allocations, composability, and itera…
tokio = { version = "1.8.4", features = ["full"] }
select = "0.4.3"                            # A library to extract useful data from HTML documents, suitable for web scraping.
url = "2.1.1"              # URL library for Rust, based on the WHATWG URL Standard
magic = "0.12.2"                      # libmagic bindings
